# nexus-drone

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.devcontainer/: devcontainer.json
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/core/: DSPUtilities.cpp  DSPUtilities.h  GenerativeAlgorithms.cpp  GenerativeAlgorithms.h  NexusModule.cpp  NexusModule.h  Placeholders.h
src/modules/: DualDroneOscillator.cpp  DualDroneOscillator.h  GenerativeCore.cpp  GenerativeCore.h
